--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,10 @@
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
 [Rr]eleases/
 x64/
 x86/
 bld/
-[Bb]in/
 [Oo]bj/
 [Ll]og/
 
@@ -68,6 +66,10 @@ artifacts/
 *.pidb
 *.svclog
 *.scc
+*.exe.manifest
+*.exe.config
+*.vshost.exe
+
 
 # Chutzpah Test files
 _Chutzpah*
